force-app/main/default/objects/collect__Collection_Activity__c/fields/CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Collection Activities</relationshipLabel>
    <relationshipName>Collection_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>