force-app/main/default/objects/collect__Collection_Activity__c/fields/Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Sent</label>
    <type>Checkbox</type>
</CustomField>